--- a/web/WEB-INF/views/components/css.html
+++ b/web/WEB-INF/views/components/css.html
@@ -1,3 +1,3 @@
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link type="text/css" rel="stylesheet" href="/resources/css/materialize.min.css" media="screen,projection"/>
+<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css" media="screen,projection"/>
 <link type="text/css" rel="stylesheet" href="/resources/css/style.css" media="screen,projection"/>
